<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_agent_detail"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/agent_picture"/>

        <TextView
            android:id="@+id/tv_name_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:textStyle="bold"
            android:padding="8dp"
            android:text="@string/nama_agents"/>

        <TextView
            android:id="@+id/tv_role_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/agent_role"/>

        <TextView
            android:id="@+id/tv_bio_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:padding="8dp"
            android:text="@string/sova_bio"/>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_margin="8dp">
            <TableRow
                android:paddingBottom="8dp">
                <TextView
                    android:id="@+id/tv_field1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sova_skill1_title"
                    android:layout_gravity="center_vertical"
                    android:padding="8dp"/>

                <TextView
                    android:id="@+id/tv_value1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:text="@string/sova_skill1_desc" />
            </TableRow>
            <TableRow
                android:paddingBottom="8dp">
                <TextView
                    android:id="@+id/tv_field2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sova_skill1_title"
                    android:layout_gravity="center_vertical"
                    android:padding="8dp"/>
                <TextView
                    android:id="@+id/tv_value2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sova_skill1_desc"
                    android:ellipsize="end"
                    android:layout_weight="1"
                    />
            </TableRow>
            <TableRow
                android:paddingBottom="8dp">
                <TextView
                    android:id="@+id/tv_field3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sova_skill1_title"
                    android:layout_gravity="center_vertical"
                    android:padding="8dp"/>
                <TextView
                    android:id="@+id/tv_value3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sova_skill1_desc"
                    android:ellipsize="end"
                    android:layout_weight="1"
                    />
            </TableRow>
            <TableRow
                android:paddingBottom="8dp">
                <TextView
                    android:id="@+id/tv_field4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sova_skill1_title"
                    android:layout_gravity="center_vertical"
                    android:padding="8dp"/>
                <TextView
                    android:id="@+id/tv_value4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sova_skill1_desc"
                    android:ellipsize="end"
                    android:layout_weight="1"
                    />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>